Added stdarg.h include (for va_list), and stddef.h (for size_t) back into the header.
Added templates for SDL2/3 backends and removed the old SDL ones.
Fixed a bug affecting backend generation where if an extern "C" block was immediately followed by a preprocessor
directive, it incorrectly omitted the brackets from the extern thinking that it was a single statement.

--- Experimental type comprehension branch

Added type comprehension system.
Added --nopassingstructsbyvalue flag to force struct parameters to be passed as pointers.
**BREAKING CHANGE** Renamed the "type" field of classes/structs/unions in the JSON output (the one that contained
"struct"/"class"/"union") to "kind" to avoid confusion with the actual type.
**BREAKING CHANGE** Removed the "names" field from field definitions in the JSON, and instead emit one field
for each distinct name defined in the original source (so "float x,y" is no longer represented in the JSON as a single
field with two names, but two separate fields). This simplifies the JSON by removing the concept of fields with
multiple names and makes field and argument definitions more consistent.
Renamed anonymous structures in the JSON from "<AnonymousN>" to "__anonymous_typeN" so as to avoid generating names
that  are not valid identifiers (which was the original goal, but in practice that seemed to cause more problems than
it solved).
Anonymous types now get a description correctly emitted in the JSON at the point of use like other types.
**BREAKING CHANGE** Type declarations for arrays in the JSON now include the array bounds (in addition to having
is_array set to True)
Added an "is_nullable" annotation to pointers in type descriptions which indicates if the pointer is "allowed" to be
null. If no value is present this means Dear Bindings doesn't know (and code should assume it can be null). At present
this only affects pointers which were converted from references, as in that case we know the value should never be null.

--- v0.04 WIP