@@ -199,6 +199,8 @@ def convert_header(src_file, dest_file_no_ext, template_dir, nostructbyvalueargu
     mod_remove_constexpr.apply(dom_root)
     mod_generate_imstr_helpers.apply(dom_root)
     mod_remove_enum_forward_declarations.apply(dom_root)
+    mod_calculate_enum_values.apply(dom_root)
+    mod_mark_special_enum_values.apply(dom_root, internal_suffixes=["_"], count_suffixes=["_COUNT"])
     mod_disambiguate_functions.apply(dom_root,
                                      name_suffix_remaps={
                                          # Some more user-friendly suffixes for certain types
